# DS_HW1

./: CMakeLists.txt  avl  avl_example.cpp  avl_tree.h  car_best_sells.cpp  car_best_sells.h  car_dealership.cpp  car_dealership.h  car_points.cpp  car_points.h  car_sells.cpp  car_sells.h  car_zero_points.cpp  car_zero_points.h  diff_log.txt  example_main.cpp  exceptions.h  library.cpp  notes.txt  rand_test.py  run_tests.py  valgrind_log.txt
AVL Tree/: avl_tree.h
Avl Tests/: AVLTreeTest.cpp  avl_tests.cpp
Car Classes/: car_points.cpp  car_sells.cpp  car_sells.h  car_zero_points.cpp  car_zero_points.h
Car manager/: car_dealership.cpp  car_dealership.h  library.cpp
Main and Tests/: in3.txt  in6.txt  main.cpp  main1.cpp  out4.txt
Submission/: avl_tree.h  car_best_sells.cpp  car_best_sells.h  car_dealership.cpp  car_dealership.h  car_points.h  car_sells.cpp  car_sells.h  car_zero_points.cpp  car_zero_points.h  ds  exceptions.h  library.cpp  submissions.txt
Tests/: AVLTreeTest.cpp  avl_tests.cpp  base_classes_tests.cpp  car_dealership_tests.cpp
Tests/rand_tests/in/: 100.txt  11.txt  12.txt  13.txt  15.txt  16.txt  17.txt  20.txt  21.txt  23.txt  24.txt  26.txt  27.txt  3.txt  30.txt  31.txt  32.txt  33.txt  41.txt  42.txt  43.txt  44.txt  46.txt  47.txt  48.txt  49.txt  5.txt  50.txt  53.txt  54.txt  55.txt  60.txt  63.txt  65.txt  66.txt  67.txt  68.txt  7.txt  70.txt  72.txt  (+14 more)
Tests/rand_tests/py_out/: py_out100.txt  py_out13.txt  py_out14.txt  py_out18.txt  py_out19.txt  py_out23.txt  py_out27.txt  py_out28.txt  py_out3.txt  py_out31.txt  (+23 more)
tests/: AVLTreeTest.cpp  avl_tests .cpp  avl_tests.cpp
(+113 files in other folders)
